--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -1,5 +1,5 @@
 div#postInfo {
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     /* width: inherit; */
     /* margin-left: 10px; */
     flex: 1;
@@ -69,6 +69,22 @@ button.btn.btn-link {
 .card-header {
     background-color: black;
     border-radius: inherit;
+}
+
+div#accordion {
+    margin: 10px 0;
+    padding: 8px 0;
+}
+
+button.btn#buttonSave {
+    background-color: white;
+    border-color: #623CEA;
+    color: #623CEA;
+}
+
+button.btn#buttonSave:hover {
+    background-color: #623CEA;
+    color: white;
 }
 
 
