--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -20,7 +20,7 @@
           </div>
           <div class="row">
               <div class="col">
-                  <button class="btn btn-primary" (click)="saveContent()">Salvar</button>
+                  <button class="btn" id="buttonSave" (click)="saveContent()">Salvar</button>
               </div>
           </div>
       </div>
