Mudando algumas coisas

--- a/ifac_si_app/src/app/component/filters/filters.component.html
+++ b/ifac_si_app/src/app/component/filters/filters.component.html
@@ -1,6 +1,6 @@
 <!-- <p>Filtrar por: </p> -->
 <div id="flex-container-filter">
-    <button><i class="bi bi-sliders2"></i>Todos os filtros</button>
+    <button><i class="bi bi-sliders2"></i>Filtros</button>
     <div class="dropdown">
         <button #category>Categoria 
             <ng-template [ngIf]="!filtersC" [ngIfElse]="dropdownIcon">
