--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -67,7 +67,7 @@ button.btn.btn-link {
 }
 
 .card-header {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     border-radius: inherit;
 }
 
