--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -21,7 +21,7 @@ div#flex-container-filter {
     display: flex;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    margin: 10px 2px 10px 60px;
+    margin: 10px 40px;
     width: fit-content;
 }
 
