--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -2,6 +2,7 @@ div#postInfo {
     /* background-color: aliceblue; */
     /* width: inherit; */
     /* margin-left: 10px; */
+    margin: 40px auto;
     flex: 1;
 }
 
