Começando a fazer tag

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -48,6 +48,10 @@ input, label, button {
     margin: 10px auto;
 }
 
+input#newTag {
+    padding: 2px 12px;
+}
+
 #topEditor {
     margin: 10px auto;
 }
