--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -93,7 +93,14 @@
                   </div>
                   <div id="collapseThree" class="collapse" aria-labelledby="headingThree">
                       <div class="card-body">
-                          Conteúdo das Tags.
+                        <Label>Adicionar nova tag</Label>
+                        <input type="text" name="tag" id="newTag">
+                        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                            <option value="" selected disabled hidden>Lista de tags</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
                       </div>
                   </div>
               </div>
