Começando a fazer tag

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -97,4 +97,10 @@ button#buttonSave:hover {
     color: white;
 }
 
+div#tagContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 
