--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -94,7 +94,10 @@
                   <div id="collapseThree" class="collapse" aria-labelledby="headingThree">
                       <div class="card-body">
                         <Label>Adicionar nova tag</Label>
-                        <input type="text" name="tag" id="newTag">
+                        <div id="tagContainer">
+                            <input type="text" name="tag" id="newTag">
+                            <i class="bi bi-plus-circle"></i>
+                        </div>
                         <select class="form-select form-select-sm" aria-label=".form-select-sm example">
                             <option value="" selected disabled hidden>Lista de tags</option>
                             <option value="1">One</option>
