Terminar na próxima

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -100,7 +100,15 @@ button#buttonSave:hover {
 div#tagContainer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
+div#tagContainer > input {
+    margin-right: 10px;
+}
+
+div#tagContainer > i {
+    margin-left: 10px;
+}
 
 
