--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -99,10 +99,8 @@
                             <i class="bi bi-plus-circle"></i>
                         </div>
                         <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                            <option value="" selected disabled hidden>Lista de tags</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option value="" selected disabled hidden>Selecione uma Tag</option>
+                            <option *ngFor="let tag of tagsList" [value]="tag.id">{{ tag.nome }}</option>                            
                         </select>
                       </div>
                   </div>
