Adicionando tag por input na lista do select, mas somente o nome, ainda precisa adicionar id e id do post

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -95,8 +95,8 @@
                       <div class="card-body">
                         <Label>Adicionar nova tag</Label>
                         <div id="tagContainer">
-                            <input type="text" name="tag" id="newTag">
-                            <i class="bi bi-plus-circle"></i>
+                            <input type="text" name="tag" id="newTag" #newTag>
+                            <i class="bi bi-plus-circle" (click)="addTag()"></i>
                         </div>
                         <select class="form-select form-select-sm" aria-label=".form-select-sm example">
                             <option value="" selected disabled hidden>Selecione uma Tag</option>
