--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -111,4 +111,37 @@ div#tagContainer > i {
     margin-left: 10px;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+    /* width: 190px; */
+    flex-shrink: 0;
+    /* margin: 0 10px; */
+}
+
+.dropdown-content {
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 10000;
+    top: 100%; /* Coloca o conteúdo logo abaixo do botão */
+    left: 0;
+}
+
+.dropdown-content p {
+    color: black;
+    padding: 12px 16px;
+    display: block;
+}
+
+.dropdown-content p:hover {
+    background-color: #f1f1f1;
+}
+
+.tags-scroll {
+    max-height: 150px;
+    overflow-y: auto;
+}
+
 
