--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -1,7 +1,7 @@
 
-<nav class="navbar">
+<!-- <nav class="navbar">
   <h3 style="text-align: center;">Quill Js Editor</h3>
-</nav>
+</nav> -->
 <div class="container">
   <div class="row">
       <div class="col-md-9" id="editorElement">
