--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -156,11 +156,16 @@ div.radio-group{
     align-items: flex-start;
 }
 
-div.radio-group input{
+div.radio-group input[type="radio"]{
     display: flex;
-    justify-content: flex-start;
     margin: 0 10px 0 0;
-    width: 10px;
+    padding: 8px 12px;
+    /* width: 10px; */
+    border-radius: 4px;
+}
+
+div.radio-group input[type="radio"]:checked {
+    background: #623CEA; /* Define a cor da borda para roxo quando selecionado */
 }
 
 #categorys {
