--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -42,7 +42,31 @@
                   </div>
                   <div id="collapseOne" class="collapse" aria-labelledby="headingOne"> <!--show para aparecer aberto-->
                       <div class="card-body">
-                          Conteúdo do Status e Visibilidade.
+                        <div class="statusDiv">
+                            <button id="statusRascunho">Salvar Rascunho</button>
+                            <button id="statusPreview">Preview</button>
+                        </div>
+                        <div id="statusPost">
+                            <div class="statusDiv">
+                                <p>Visibilidade:</p>
+                                <p></p>
+                                <button>Editar</button>
+                            </div>
+                            <div class="statusDiv">
+                                <p>Publicação:</p>
+                                <p></p>
+                                <button>Editar</button>
+                            </div>
+                            <div class="statusDiv">
+                                <p>Status:</p>
+                                <p></p>
+                                <button>Editar</button>
+                            </div>
+                        </div>
+                        <div class="statusDiv">
+                            <button id="statusDelete">Deletar</button>
+                            <button id="statusSave">Salvar</button>
+                        </div>
                       </div>
                   </div>
               </div>
