--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -40,13 +40,13 @@
                           </button>
                       </h5>
                   </div>
-                  <div id="collapseOne" class="collapse" aria-labelledby="headingOne"> <!--show para aparecer aberto-->
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"> <!--show para aparecer aberto-->
                       <div class="card-body">
-                        <div class="statusDiv">
+                        <div class="statusDiv viewPost">
                             <button id="statusRascunho">Salvar Rascunho</button>
                             <button id="statusPreview">Preview</button>
                         </div>
-                        <div id="statusPost">
+                        <div class="viewPost" id="statusPost">
                             <div class="statusDiv">
                                 <p>Visibilidade:</p>
                                 <p></p>
@@ -63,7 +63,7 @@
                                 <button>Editar</button>
                             </div>
                         </div>
-                        <div class="statusDiv">
+                        <div class="statusDiv viewPost" id="saveDiv">
                             <button id="statusDelete">Deletar</button>
                             <button id="statusSave">Salvar</button>
                         </div>
