Melhorando popUp delete

--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.css
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.css
@@ -21,3 +21,11 @@
     display: flex;
     justify-content: space-between;
 }
+
+div.buttonActions button#confirmButton {
+    background-color: #3fa14cb2;
+}
+
+div.buttonActions button#cancelButton {
+    background-color: #bf4226ad;
+}
