--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.css
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.css
@@ -12,20 +12,31 @@
 }
 
 .popUp {
+    /* display: flex; */
+    text-align: center;
     padding: 10px;
     background-color: white;
     border-radius: 5px;
 }
 
+div#alignButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .buttonActions{
     display: flex;
     justify-content: space-between;
+    width: 50%;
 }
 
 div.buttonActions button {
+    font-weight: 500;
+    padding: 5px;
     height: fit-content;
     border-radius: 4px;
-    border-width: 1px;
+    border: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -53,14 +64,14 @@ div.buttonActions button div {
     display: flex;       /* Ajuda a centralizar o conteúdo */
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     padding: 5px;
     margin-left: 10px;
 }
 
 div.buttonActions button i{
     color: white;
-    font-size: 24px; /* Tamanho do ícone */
-    font-weight: bold;
+    font-size: 20px; /* Tamanho do ícone */
+    font-weight: bolder;
 }
