--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.html
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.html
@@ -2,13 +2,15 @@
     <div class="popUp">
         <p>Você tem certeza que deseja deletar este item?</p>
         <p>Essa ação será enviada para aprovação de deleção, uma vez que aceita, não pode ser desfeita</p>
-        <div class="buttonActions">
-            <button #cancelButton id="cancelButton">Cancelar
-                <div><i class="bi bi-x-lg"></i></div>
-            </button>
-            <button #confirmButton id="confirmButton">Confirmar
-                <div><i class="bi bi-check-lg"></i></div>
-            </button>    
+        <div id="alignButton">
+            <div class="buttonActions">
+                <button #cancelButton id="cancelButton">Cancelar
+                    <div><i class="bi bi-x-lg"></i></div>
+                </button>
+                <button #confirmButton id="confirmButton">Confirmar
+                    <div><i class="bi bi-check-lg"></i></div>
+                </button>    
+            </div>
         </div>
     </div>
 </div>
