--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.css
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.css
@@ -12,6 +12,13 @@
 }
 
 .popUp {
+    font-weight: 600;
+    height: 40%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     /* display: flex; */
     text-align: center;
     padding: 10px;
@@ -20,6 +27,7 @@
 }
 
 div#alignButton {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,11 +35,13 @@ div#alignButton {
 
 .buttonActions{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20px;
     width: 50%;
 }
 
 div.buttonActions button {
+    /* margin: 10px; */
     font-weight: 500;
     padding: 5px;
     height: fit-content;
