Começando a adicionar elementos visuais, depois melhore conectar tudo

--- a/ifac_si_app/src/app/component/alerta/alerta.component.html
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.html
@@ -1,1 +1,4 @@
-<p>alerta works!</p>
+<div class="alerta inativo">
+    <span id="fechar" (click)="fecharAlerta()">&times;</span>
+    <span id="mensagem"></span>
+</div>
