--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.css
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.css
@@ -13,7 +13,7 @@
 
 .popUp {
     font-weight: 600;
-    height: 40%;
+    height: 50%;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -35,9 +35,10 @@ div#alignButton {
 }
 
 .buttonActions{
+    margin-top: 15px;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     width: 50%;
 }
 
