--- a/ifac_si_app/src/app/component/alerta/alerta.component.css
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.css
@@ -1,13 +1,30 @@
 div.alerta {
+    top: 20px;
+    right: 20px;
+    /* margin: 10px; */
+    background-color: #f0f0f0;
+    z-index: 100001;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
     border: 1px solid;
     padding: 1em;
     max-width: 400px;
     margin: 1em auto;
     word-wrap: break-word;
+    border-left: 5px solid #623CEA;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 4px;
+    /* border-width: 10px; */
+    border: 0 0 0 0;
+    gap: 10px;
 }
 
 div.alerta span#fechar {
-    float: right;
+    display: flex;
+    /* justify-content: flex-end; */
     font-size: 1.5em;
     cursor: pointer;
 }
@@ -24,6 +41,6 @@ div.alerta.sucesso {
     border-color: #365837;
 }
 
-div.alerta.inativo {
+/* div.alerta.inativo {
     display: none;
-}
+} */
