--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.css
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.css
@@ -1,5 +1,9 @@
 div.viewPost {
-    margin: auto 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    margin: 20px 0;
 }
 
 body {
@@ -11,7 +15,8 @@ body {
 
 .container {
     width: 100%;
-    max-width: 1200px; /* Ou o valor que você preferir */
+    margin: 0;
+    /* max-width: 1200px; Ou o valor que você preferir */
     /* margin: 0 100px; */
     padding: 0 20px;
     box-sizing: border-box;
