--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.css
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     width: 100%;
-    margin: 0;
+    margin-left: 2%;
     /* max-width: 1200px; Ou o valor que você preferir */
     /* margin: 0 100px; */
     padding: 0 20px;
