--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.css
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.css
@@ -131,3 +131,13 @@ div#postAction button, button.eyeButton {
     border-radius: 5px;
     font-size: 22px;
 }
+
+div.categorys {
+    position: absolute;
+    color: aliceblue;
+    font-weight: 500;
+    z-index: 20000;
+    background-color: #3FA14C;
+    padding: 10px;
+    width: fit-content;
+}
