--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -8,6 +8,7 @@
             <div *ngFor="let post of posts">
                 <div class="postView">
                     <div id="postComposition" #postComposition>
+                        <div class="categorys">{{post.categoria?.nome}}</div>
                         <div id="postImage" #postImage>
                             <button class="eyeButton"><i class="bi bi-eye" style="font-weight: bold;"></i></button>
                             <img src="../../../assets/images/no-photo.png" alt="Imagem indisponível">
