Terminando algumas coisas

--- a/ifac_si_app/src/app/component/alerta/alerta.component.html
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.html
@@ -1,4 +1,4 @@
 <div class="alerta" *ngIf="show">
     <span id="fechar" (click)="fecharAlerta()">&times;</span>
-    <span id="mensagem">{{ getMensagemAlerta() }}Teste</span>
+    <span id="mensagem">{{ getMensagemAlerta() }}</span>
 </div>
