--- a/ifac_si_app/src/app/component/notification/notification.component.css
+++ b/ifac_si_app/src/app/component/notification/notification.component.css
@@ -5,11 +5,19 @@ section {
 }
 
 div#notificationsView {
+    display: flex;
+    /* justify-content: space-between; */
+    flex-direction: row;
     background-color: #D9D9D9;
     width: 80%;
     border-radius: 4px;
     margin: 5px auto;
     padding: 10px;
+    box-sizing: border-box;
+}
+
+div#notification {
+    width: 100%;
 }
 
 div#notificationData {
@@ -18,14 +26,20 @@ div#notificationData {
     width: fit-content;
     font-weight: 500;
     margin: auto 10px;
+    flex-shrink: 0;
 }
 
 div#notificationData p:first-child {
     margin-right: 5px;
 }
 
+div#notificationTitle {
+    width: 100%;
+    background-color: #ffff;
+    flex-grow: 1;
+}
+
 div#notificationTitle p {
-    background-color: #FFFFFF;
     margin: auto 10px;
     padding: 5px;
     border-radius: 4px;
