--- a/ifac_si_app/src/app/component/notification/notification.component.html
+++ b/ifac_si_app/src/app/component/notification/notification.component.html
@@ -1,20 +1,23 @@
 <h2>Notificações<i class="bi bi-bell"></i></h2>
 <section *ngFor="let notification of notifications">
     <div id="notificationsView">
-        <div id="notificationData">
-            <p>{{notification.userName}}</p> 
-            <ng-template [ngIf]='notification.action == "DELETE"'>
-                <p> deletou um post</p>
-            </ng-template>   
-            <ng-template [ngIf]='notification.action == "POST"'>
-                <p> adicionou um novo post</p>
-            </ng-template>
-            <ng-template [ngIf]='notification.action == "UPDATE"'>
-                <p> editou um post</p>
-            </ng-template> 
-        </div>
-        <div id="notificationTitle">
-            <p>{{notification.title}}</p>
+        <i class="bi bi-person-circle"></i>
+        <div id="notification">
+            <div id="notificationData">
+                <p>{{notification.userName}}</p> 
+                <ng-template [ngIf]='notification.action == "DELETE"'>
+                    <p> deletou um post</p>
+                </ng-template>   
+                <ng-template [ngIf]='notification.action == "POST"'>
+                    <p> adicionou um novo post</p>
+                </ng-template>
+                <ng-template [ngIf]='notification.action == "UPDATE"'>
+                    <p> editou um post</p>
+                </ng-template> 
+            </div>
+            <div id="notificationTitle">
+                <p>{{notification.title}}</p>
+            </div>
         </div>
     </div>
 </section>
