--- a/ifac_si_app/src/app/component/notification/notification.component.css
+++ b/ifac_si_app/src/app/component/notification/notification.component.css
@@ -44,3 +44,21 @@ div#notificationTitle p {
     padding: 5px;
     border-radius: 4px;
 }
+
+.avatar-circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #e0e0e0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin-right: 10px;
+}
+
+.avatar-circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
