--- a/ifac_si_app/src/app/component/notification/notification.component.html
+++ b/ifac_si_app/src/app/component/notification/notification.component.html
@@ -1,7 +1,9 @@
 <h2>Notificações<i class="bi bi-bell"></i></h2>
 <section *ngFor="let notification of notifications">
     <div id="notificationsView">
-        <i class="bi bi-person-circle"></i>
+        <div class="avatar-circle">
+            <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
+        </div>
         <div id="notification">
             <div id="notificationData">
                 <p>{{notification.userName}}</p> 
