--- a/ifac_si_app/src/app/component/notification/notification.component.html
+++ b/ifac_si_app/src/app/component/notification/notification.component.html
@@ -1,8 +1,10 @@
 <h2>Notificações<i class="bi bi-bell"></i></h2>
 <section *ngFor="let notification of notifications">
     <div id="notificationsView">
-        <div class="avatar-circle">
-            <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
+        <div id="avatar-notification">
+            <div class="avatar-circle">
+                <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
+            </div>
         </div>
         <div id="notification">
             <div id="notificationData">
