--- a/ifac_si_app/src/app/component/notification/notification.component.css
+++ b/ifac_si_app/src/app/component/notification/notification.component.css
@@ -1,3 +1,34 @@
+h2 {
+    margin: 50px;
+    position: relative;
+    width: fit-content;
+}
+
+h2::before {
+    content: '';
+    position: absolute;
+    right: 0;  /* Começa da direita */
+    top: -5px; /* Ajuste conforme necessário */
+    width: 60%; /* Ajuste o comprimento da linha conforme necessário */
+    height: 3px;
+    background-color: #008000; /* Verde */
+}
+
+h2::after {
+    content: '';
+    position: absolute;
+    left: 0;   /* Começa da esquerda */
+    bottom: -5px;
+    width: 60%;
+    height: 3px;
+    background-color: #4B0082; /* Roxo */
+}
+
+
+h2 i{
+    margin-left: 10px;
+}
+
 section {
     display: flex;
     justify-content: center;
@@ -61,6 +92,7 @@ div#avatar-notification {
     justify-content: center;
     overflow: hidden;
     margin-right: 10px;
+    border: 1px solid black;
 }
 
 .avatar-circle img {
