--- a/ifac_si_app/src/app/component/notification/notification.component.html
+++ b/ifac_si_app/src/app/component/notification/notification.component.html
@@ -1,6 +1,9 @@
 <h2>Notificações<i class="bi bi-bell"></i></h2>
 <section *ngFor="let notification of notifications">
-    <div id="notificationsView">
+    <div id="notificationsView"      
+    [class.deleteView]="notification.action === 'DELETE'"
+    [class.addView]="notification.action === 'POST'"
+    [class.updateView]="notification.action === 'UPDATE'">
         <div id="avatar-notification">
             <div class="avatar-circle">
                 <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
