--- a/ifac_si_app/src/app/component/notification/notification.component.css
+++ b/ifac_si_app/src/app/component/notification/notification.component.css
@@ -66,16 +66,23 @@ div#notificationsView.addView {
 div#notificationsView.deleteView:hover {
     background-color: #aa3cea;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 div#notificationsView.updateView:hover {
     background-color: #3FA14C;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 div#notificationsView.addView:hover {
     background-color: #623CEA;
     transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+div#notificationsView.addView:hover div#notificationData p, div#notificationsView.updateView:hover div#notificationData p, div#notificationsView.deleteView:hover div#notificationData p {
+    color: white;
 }
 
 div#notification {
