--- a/ifac_si_app/src/app/component/admin-view/admin-view.component.html
+++ b/ifac_si_app/src/app/component/admin-view/admin-view.component.html
@@ -18,7 +18,7 @@
                 <td>{{usuario.nomeUsuario}}</td>
                 <td>{{usuario.nomeCompleto}}</td>
                 <td>{{usuario.cargo}}</td>
-                <button>EDITAR</button>
+                <td><button>EDITAR</button></td>
             </tr>
         </tbody>
     </table>
