Criando component para o formUsuário

--- a/ifac_si_app/src/app/component/user-form/user-form.component.html
+++ b/ifac_si_app/src/app/component/user-form/user-form.component.html
@@ -1,1 +1,11 @@
-<p>user-form works!</p>
+<div>
+    <div>
+        <form #form>
+            <h3>Adicionar novo usuário</h3>
+            <label>Nome de usuário</label><input type="text">
+            <label>Nova senha</label><input type="text">
+            <label>Confirmar senha</label><input type="text">
+            <label>Role</label><select id="cargo"></select>
+        </form>
+    </div>
+</div>
