--- a/ifac_si_app/src/app/component/admin-view/admin-view.component.css
+++ b/ifac_si_app/src/app/component/admin-view/admin-view.component.css
@@ -66,7 +66,6 @@ table tbody tr:not(:last-child), table thead tr{
 
 button {
     padding: 5px 30px;
-    border-radius: 10px;
     border-color: #623CEA;
     color: #623CEA;
     background-color: transparent;
@@ -75,4 +74,11 @@ button {
 
 button:not(div button:first-child) {
     font-weight: 500;
+    border-radius: 10px;
+}
+
+div button:first-child {
+    border-radius: 50px;
+    padding: 5px 15px;
+    border-width: 1px;
 }
