--- a/ifac_si_app/src/app/component/admin-view/admin-view.component.html
+++ b/ifac_si_app/src/app/component/admin-view/admin-view.component.html
@@ -5,6 +5,9 @@
 <h2>Gerenciamento de Perfil</h2>
 <h5>Você pode adicionar novos usuários, alterar permissões existentes ou excluir usuários existentes.</h5>
 <section>
+    <div *ngIf="selectedUsers.length > 0" class="selection-indicator">
+        {{ selectedUsers.length }} item(s) selecionado(s)
+    </div>
     <div>
         <button>Todos os usuários <i class="bi bi-chevron-down"></i></button>
         <button (click)="showForm()">Novo usuário <i class="bi bi-plus-lg"></i></button>
@@ -12,6 +15,12 @@
     <table>
         <thead>
             <tr>
+                <th>
+                    <input 
+                    type="checkbox" 
+                    [checked]="selectAll"
+                    (change)="selectAll = !selectAll; toggleSelectAll()">
+                </th>
                 <th>USUÁRIO <i class="bi bi-person-lines-fill"></i></th>
                 <th>EMAIL</th>
                 <th>ROLE</th>
@@ -20,6 +29,13 @@
         </thead>
         <tbody>
             <tr *ngFor="let usuario of usuarios">
+            <td>
+                <input 
+                type="checkbox" 
+                [checked]="isSelected(usuario.id)"
+                (change)="toggleSelect(usuario.id)"
+              >
+            </td>
                 <td>{{usuario.nomeUsuario}}</td>
                 <td>{{usuario.nomeCompleto}}</td>
                 <td>{{usuario.cargo}}</td>
