--- a/ifac_si_app/src/app/component/admin-view/admin-view.component.html
+++ b/ifac_si_app/src/app/component/admin-view/admin-view.component.html
@@ -36,10 +36,43 @@
                 (change)="toggleSelect(usuario.id)"
               >
             </td>
-                <td>{{usuario.nomeUsuario}}</td>
+                <td>
+                    <ng-container *ngIf="editingUser?.id === usuario.id; else displayUser">
+                        <input 
+                          type="text" 
+                          [(ngModel)]="tempData.nomeUsuario" 
+                          class="edit-input"
+                        >
+                    </ng-container>
+                    <ng-template #displayUser>
+                        {{ usuario.nomeUsuario }}
+                    </ng-template>
+                </td>
                 <td>{{usuario.nomeCompleto}}</td>
-                <td>{{usuario.cargo}}</td>
-                <td><button>EDITAR</button></td>
+                <td>
+                    <ng-container *ngIf="editingUser?.id === usuario.id; else displayCargo">
+                        <select [(ngModel)]="tempData.cargo" class="edit-select">
+                        <option value="AUTOR">AUTOR</option>
+                        <option value="EDITOR">EDITOR</option>
+                        <option value="ADMIN">ADMIN</option>
+                        </select>
+                    </ng-container>
+                    <ng-template #displayCargo>
+                        {{ usuario.cargo }}
+                    </ng-template>
+                </td>
+                <td>
+                    <ng-container *ngIf="editingUser?.id === usuario.id; else editButton">
+                        <button (click)="saveEdit(usuario)" class="save-btn">
+                        <i class="fas fa-save"></i>
+                        </button>
+                    </ng-container>
+                    <ng-template #editButton>
+                        <button (click)="startEditing(usuario)" class="edit-btn">
+                        <i class="fas fa-pencil-alt"></i>
+                        </button>
+                    </ng-template>
+                </td>
             </tr>
         </tbody>
     </table>
